if(IVW_TINY_GLUT_APPLICATION)
    if(NOT IVW_MODULE_GLUT)
        set(IVW_MODULE_GLUT ON CACHE BOOL "Build Glut Module" FORCE)
        ivw_message("IVW_MODULE_GLUT was set to build, due to dependency towards IVW_TINY_GLUT_APPLICATION")
    endif()
    add_subdirectory(glutminimum)
endif()
if(IVW_QT_APPLICATION)
    find_package(Qt QUIET REQUIRED)
    
    set(QT_DONT_USE_QTCORE FALSE)
    set(QT_DONT_USE_QTGUI FALSE)
    set(QT_USE_QT3SUPPORT FALSE)
    set(QT_USE_QTASSISTANT FALSE)
    set(QT_USE_QTDESIGNER FALSE)
    set(QT_USE_QTMOTIF FALSE)
    set(QT_USE_QTMAIN FALSE)
    set(QT_USE_QTNETWORK FALSE)
    set(QT_USE_QTNSPLUGIN FALSE)
    set(QT_USE_QTOPENGL TRUE)
    set(QT_USE_QTSQL FALSE)
    set(QT_USE_QTXML FALSE)
    set(QT_USE_QTSVG FALSE)
    set(QT_USE_QTTEST FALSE)
    set(QT_USE_QTUITOOLS FALSE)
    set(QT_USE_QTDBUS FALSE)
    set(QT_USE_QTSCRIPT FALSE)
    set(QT_USE_QTASSISTANTCLIENT FALSE)
    set(QT_USE_QTHELP FALSE)
    set(QT_USE_QTWEBKIT FALSE)
    set(QT_USE_QTXMLPATTERNS FALSE)
    set(QT_USE_PHONON FALSE)
    
    add_subdirectory(inviwo)
endif()